# speech-bot

./: README.md  main.py  pyproject.toml
configs/: __init__.py  configs.yaml
modules/: command_interpreter.py  speaker.py  speech_recognizer.py
tasks/: rick_roll.py  time_information.py
utils/: exceptions.py  file_deletion.py  string_formatting.py  webdriver.py
